Strip View Style config: - StripView     * Added a new initializer     * improve device orientations handling     * Remove the Spinner view     * Deprecate old initializer     * fix External Links Handling
- APEStripConfiguration
    * Added APEStripStyle (set the strip style value) parameter.
fixes and updates

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ fastlane/screenshots
 fastlane/test_output
 ApesterKit.xcodeproj/xcshareddata/xcschemes/Apester.xcscheme
 ApesterKit.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+*.resolved
