feature/companion-ads-layout - added test plans and location date

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,7 +11,7 @@ platform :ios, '11.0'
 use_frameworks!
 
 target 'ApesterKit_Example' do
-  pod 'ApesterKit', :path => '../'; # , :appspecs => ['HostApp'], :testspecs => ['UnitTests'];
+  pod 'ApesterKit', :path => '../' , :appspecs => ['HostApp'] , :testspecs => ['UnitTests','UITests'];
 
   target 'ApesterKit_Tests' do
     inherit! :search_paths
