--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,5 +11,6 @@ platform :ios, '11.0'
 use_frameworks!
 
 target 'ApesterKit_Example' do
-  pod 'ApesterKit', :path => '../'; #, :appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
+  pod 'ApesterObjcBridging', :path => '../';
+  pod 'ApesterKit'         , :path => '../' , :appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
 end
