added login | tabs | favorites | likeButton - version 3.8.87 (1007)

--- a/Example/ApesterKit.xcodeproj/xcshareddata/xcschemes/ApesterKit-Example.xcscheme
+++ b/Example/ApesterKit.xcodeproj/xcshareddata/xcschemes/ApesterKit-Example.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "ApesterKit_Example.app"
-               BlueprintName = "ApesterKit_Example"
+               BuildableName = "Apester.app"
+               BlueprintName = "Apester"
                ReferencedContainer = "container:ApesterKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ApesterKit_Example.app"
-            BlueprintName = "ApesterKit_Example"
+            BuildableName = "Apester.app"
+            BlueprintName = "Apester"
             ReferencedContainer = "container:ApesterKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -78,8 +78,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ApesterKit_Example.app"
-            BlueprintName = "ApesterKit_Example"
+            BuildableName = "Apester.app"
+            BlueprintName = "Apester"
             ReferencedContainer = "container:ApesterKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -95,8 +95,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ApesterKit_Example.app"
-            BlueprintName = "ApesterKit_Example"
+            BuildableName = "Apester.app"
+            BlueprintName = "Apester"
             ReferencedContainer = "container:ApesterKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
