--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,7 +10,7 @@ platform :ios, '14.0'
 
 use_frameworks!
 
-target 'ApesterKit_Example' do
+target 'Apester' do
   pod 'ApesterObjcBridging', :path => '../' ;
   pod 'ApesterKit'         , :path => '../' , :appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
   pod 'AmazonPublisherServicesSDK', '~> 4.7.7'
