--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,11 +6,22 @@ workspace 'ApesterKit.xcworkspace'
 
 project 'ApesterKit.xcodeproj'
 
-platform :ios, '11.0'
+platform :ios, '13.0'
 
 use_frameworks!
 
 target 'ApesterKit_Example' do
   pod 'ApesterObjcBridging', :path => '../' ;
   pod 'ApesterKit'         , :path => '../' , :appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
+end
+
+post_install do |installer|
+  installer.generated_projects.each do |project|
+        project.targets.each do |target|
+            target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+              
+             end
+        end
+ end
 end
