--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,16 +12,18 @@ use_frameworks!
 
 target 'ApesterKit_Example' do
   pod 'ApesterObjcBridging', :path => '../' ;
-  pod 'ApesterKit'         , :path => '../' , :appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
+  pod 'ApesterKit'         , :path => '../' ;
+# ,:appspecs => ['zHostApp'] , :testspecs => ['zUnitTests','zUITests'];
 end
 
 post_install do |installer|
   installer.generated_projects.each do |project|
-        project.targets.each do |target|
-            target.build_configurations.each do |config|
-                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-              
-             end
-        end
- end
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      end
+    end
+  end
 end
+
+
